--- a/050317/index.html
+++ b/050317/index.html
@@ -6,28 +6,32 @@
   </head>
   <body>
     <h1>- m i c h a e l a l l e n b r o o k s -</h1>
-      <h5>est.</h5>
-      <h3>1982</h3>
-        <div class="sidebar">
-          <h2>ABOUT</h2>
-          <h2>WHERE</h2>
-          <h2>HOW</h2>
-          <h2>WHEN</h2>
-          <h2>CONTACT</h2>
-        </div>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse in fermentum mauris, vitae lobortis eros. Nulla sollicitudin ullamcorper ligula vel dictum. Suspendisse posuere lectus erat, at faucibus diam feugiat quis. Pellentesque dui mauris, elementum eget dui vitae, bibendum dignissim sapien. In in neque eu erat dapibus congue a in tortor. Quisque porta pellentesque elit id iaculis. Donec eget lectus libero. Etiam ex ante, vulputate in neque sit amet, sodales viverra ante. Quisque mauris arcu, vulputate nec augue in, porta hendrerit nisi. Aliquam ullamcorper rhoncus auctor. Cras ut purus nisi. Fusce gravida orci ac turpis molestie iaculis. Morbi faucibus mi ac tempor iaculis. Sed sit amet tempor quam.</p>
-
-        <p>Lorem ipsum dolor sit amet.</p>
-
-        <ul>
-          <li>Lorem ipsum dolor sit amet.</li>
-          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-          <li>Mauris elementum libero eget viverra placerat</li>
-          <li>Ut in nibh in sapien semper suscipit</li>
-          <li>Donec quis ligula in purus fermentum condimentum vitae sed tellus</li>
-          <li>Cras accumsan mauris et velit venenatis ornare</li>
-          <li>Aenean et leo vitae felis maximus consequat sit amet eu dui</li>
-        </ul>
+    <h5>est.</h5>
+    <h3>1982</h3>
+      <div class="sidebar">
+        <h2>ABOUT</h2>
+        <h2>WHERE</h2>
+        <h2>HOW</h2>
+        <h2>WHEN</h2>
+        <h2>CONTACT</h2>
+      </div>
+    <p class="main">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse in fermentum mauris, vitae lobortis eros. Nulla sollicitudin ullamcorper ligula vel dictum. Suspendisse posuere lectus erat, at faucibus diam feugiat quis. Pellentesque dui mauris, elementum eget dui vitae, bibendum dignissim sapien. In in neque eu erat dapibus congue a in tortor. <strong>Quisque porta pellentesque elit id iaculis.</strong> Donec eget lectus libero. Etiam ex ante, vulputate in neque sit amet, sodales viverra ante. Quisque mauris arcu, vulputate nec augue in, porta hendrerit nisi. Aliquam ullamcorper rhoncus auctor. Cras ut purus nisi. Fusce gravida orci ac turpis molestie iaculis. Morbi faucibus mi ac tempor iaculis. Sed sit amet tempor quam.</p>
+    <p>Lorem ipsum dolor sit amet.</p>
+    <ul>
+      <li><em>Lorem ipsum dolor sit amet.</em></li>
+      <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+      <li>Mauris elementum libero eget viverra placerat</li>
+      <li>Ut in nibh in sapien semper suscipit</li>
+      <li>Donec quis ligula in purus fermentum condimentum vitae sed tellus</li>
+      <li>Cras accumsan mauris et velit venenatis ornare</li>
+      <li>Aenean et leo vitae felis maximus consequat sit amet eu dui</li>
+    </ul>
+    <div class="right">
+      <p><a href="https://www.instagram.com/michaelallenbrooks">instagram</a></p>
+      <p>email</p>
+      <p><a href="503-568-5393">phone</a></p>
+    </div>
   </body>
 </html>
+monday week three divs and spans
+once i get all the base elements in i need to work on branching for alternate designs
